--- a/dashboard/src/locales/langs/en/common.json
+++ b/dashboard/src/locales/langs/en/common.json
@@ -49,6 +49,7 @@
   "request": "Request",
   "important": "Important",
   "view_all": "View All",
+  "need_help": "Need help?",
   "sign_in": {
     "sign_in_to_your_account": "Sign in to your account",
     "password": "Password",
