--- a/dashboard/src/locales/langs/fr/common.json
+++ b/dashboard/src/locales/langs/fr/common.json
@@ -48,6 +48,7 @@
   "send": "Envoyer",
   "request": "Requête",
   "view_all": "Voir tous",
+  "need_help": "Besoin d'aide?",
   "sign_in": {
     "sign_in_to_your_account": "Connecte-toi à ton compte",
     "password": "Mot de passe",
